--- a/src/main/resources/templates/user_panel.html
+++ b/src/main/resources/templates/user_panel.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
     <title>Info</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
     <style>
         .full-height {
             min-height: 100vh;
@@ -13,70 +15,114 @@
     </style>
 </head>
 <body>
+
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-        <span class="navbar-text text-light fs-5">
-            <span class="navbar-text text-light fw-bold" th:text="${user.email}"/>
-            with roles:
-            <span th:each="role : ${user.getRoles()}">
-                <span th:text="${role.getRole()}"/>
-            </span>
-        </span>
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-            </li>
-        </ul>
+        <div class="row navbar-text ml-1" id="navbar"></div>
+        <form class="form-inline" th:action="@{/logout}" method="post">
+            <button class="btn btn-link text-white-50" type="submit">Logout</button>
+        </form>
     </div>
 </nav>
-<div class="container-fluid">
-    <div class="row no-gutters full-height">
-        <div class="col-2 p-3 px-0">
-            <div class="list-group">
-                <div sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a href="/admin" class="list-group-item list-group-item-action">Admin</a>
-                </div>
-                <a href="/user" class="list-group-item list-group-item-action active" aria-current="true">
-                    User
-                </a>
-            </div>
+
+
+<div class="row no-gutters full-height">
+    <div class="col-2 mt-3">
+        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link active" id="user-tab" data-toggle="tab" href="#user_table" role="tab"
+               aria-controls="user_table" aria-selected="true">User</a>
         </div>
-        <div class="col-10 bg-light p-3 px-4">
-            <h1 class="fs-1">User information-page</h1>
-            <div class="card">
-                <div class="card-header fw-semibold fs-5">
-                    About user
+    </div>
+    <div class="tab-content active bg-light min-vh-100 col-lg-10 px-4">
+        <div class="tab-pane active" id="user_table" role="tabpanel" aria-labelledby="user-tab">
+            <div class="">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+                    <h1 class="h2">User information-page</h1>
                 </div>
-                <div class="card-body">
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col">First Name</th>
-                            <th scope="col">Last Name</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Role</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td th:text="${user.getId()}">id</td>
-                            <td th:text="${user.getFirstName()}">first name</td>
-                            <td th:text="${user.getLastName()}">last name</td>
-                            <td th:text="${user.getEmail()}">email</td>
-                            <td>
-                                <span th:each="role : ${user.getRoles()}">
-                                    <span th:text="${role.getRole()}"/>
-                                </span>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+                <div class="card">
+                    <div class="card-header h5">About user</div>
+                    <div class="card-body">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Role</th>
+                            </tr>
+                            </thead>
+                            <tbody id="user_table_body"></tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+<script>
+
+    getSessionUser();
+
+    async function getSessionUser() {
+        try {
+            const res = await fetch('http://localhost:8080/user/sessionUser');
+            const data = await res.json();
+            console.log(data); // Для проверки данных
+            sessionUserToHtml(data);
+            showSessionUser(data);
+        } catch (error) {
+            console.error('Error fetching session user:', error);
+        }
+    }
+
+    function sessionUserToHtml({email, roles}) {
+        const navbarUser = document.getElementById('navbar');
+        let role = '';
+        if (roles) {
+            roles.forEach((r) => role += r.role.substring(5) + " ");
+        }
+        navbarUser.innerHTML = `
+            <div class="navbar-text d-inline text-white font-weight-bold h5">
+                ${email}
+                <div class="navbar-text d-inline text-left text-white font-weight-normal h5">
+                    with roles:
+                    <div class="navbar-text d-inline text-left text-white font-weight-normal h5">
+                        ${role}
+                    </div>
+                </div>
+            </div>
+        `;
+    }
+
+    function showSessionUser({id, firstName, lastName, email, roles}) {
+        const tableUser = document.getElementById('user_table_body');
+        let role = '';
+        if (roles) {
+            roles.forEach((r) => role += r.role.substring(5) + " ");
+        }
+        tableUser.innerHTML = `
+            <td height="50" class="align-middle">${id}</td>
+            <td class="align-middle">${firstName}</td>
+            <td class="align-middle">${lastName}</td>
+            <td class="align-middle">${email}</td>
+            <td class="align-middle">${role}</td>
+        `;
+    }
+
+</script>
 
 </body>
 </html>
